# Kestrel-Programming-Language

./: .gitignore  CNAME  Cargo.toml  LICENSE  Makefile.toml  README.md  a.ll  a.out  a.s  b.ll  f.c  f.ll  f.rs  index.html  out.ll  out2.ll  output.s  program.ke
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
docs/: conventions.md  expr_stmts.md  functions.md  keywords.md  references.md  symbols.md  traits.md  types.md
docs/methods/: Array.md  String.md
docs/modules/: modules.md
docs/modules/std/: out.md  std.md
examples/: printf_example.rs
rustdocs/: crates.js  help.html  search-index.js  settings.html  source-files.js
rustdocs/kestrel/: all.html  fn.main.html  index.html  sidebar-items.js
rustdocs/kestrel/codegen/: enum.ForwardDeclarationType.html  enum.InitializationStatus.html  enum.TemplateFunctionInstance.html  fn.generate_code.html  index.html  sidebar-items.js  struct.CodeGen.html  struct.InkwellTypes.html  struct.Namespaces.html
rustdocs/kestrel/errors/: constant._IMPL_NUM_FromPrimitive_FOR_ErrorType.html  constant._IMPL_NUM_FromPrimitive_FOR_WarningType.html  enum.ErrorType.html  enum.WarningType.html  fn.raise_error.html  fn.raise_error_multi.html  fn.raise_error_no_pos.html  fn.repr_err.html  fn.repr_warn.html  fn.show_warning.html  index.html  sidebar-items.js
rustdocs/kestrel/fileinfo/: index.html  sidebar-items.js  (+1 more)
src/: main.rs
src/codegen/: mod.rs
src/errors/: mod.rs
src/fileinfo/: mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs  nodes.rs  precedence.rs
src/tests/: mod.rs
(+408 files in other folders)
