[package]
name = "kestrel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
inkwell = {git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"]}
llvm-sys = "0.2"
guess_host_triple = "0.1.3"
colored = "2.0.0"
itertools = "0.10.5"