[package]
name = "kestrel"
version = "0.1.5"
edition = "2021"

[dependencies]
llvm-sys = "100"
inkwell = {git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"]}
guess_host_triple = "0.1.3"
colored = "2.0.0"
itertools = "0.10.5"
unicode-width = "0.1.7"
Inflector = "*"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
ngrammatic = "0.4.0"
